# ME-Geofence-

./: Cargo.toml
config/: config.json
src/: main.rs
